# clusterChatServer

./: README.md
chat/: CMakeLists.txt
chat/include/server/model/: friendmodel.hpp  group.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
chat/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
chatServer/: README.md  可能的问题.docx
chatServer/chat/: CMakeLists.txt
chatServer/chat/build_check/: CMakeCache.txt  Makefile  cmake_install.cmake
chatServer/chat/build_check/src/: Makefile  cmake_install.cmake
chatServer/chat/build_check/src/client/: Makefile  cmake_install.cmake
chatServer/chat/build_check/src/server/: Makefile  cmake_install.cmake
chatServer/chat/include/server/: chatService.hpp
chatServer/chat/include/server/db/: db.h
chatServer/chat/include/server/model/: friendModel.hpp  group.hpp  groupModel.hpp  groupUser.hpp  offlineMessageModel.hpp  user.hpp  userModel.hpp
chatServer/chat/include/server/redis/: redis.hpp
chatServer/chat/src/client/: main.cpp
chatServer/chat/src/server/: chatserver.cpp  chatservice.cpp  main.cpp
chatServer/chat/src/server/db/: db.cpp
chatServer/chat/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
chatServer/chat/src/server/redis/: redis.cpp
chatServer/test/testjson/: testJson.cpp
chatServer/test/testmuduo/: CMakeLists.txt  muduo_server.cpp
test/testjson/: testJson.cpp
test/testmuduo/: muduo_server.cpp
